force-app/main/default/objects/Payment_Transaction__c/Payment_Transaction__c.object-meta.xml
<CustomObject>
    <label>עסקת מע&quot;מ</label>
    <nameField>
        <displayFormat>TRN-{0000000}</displayFormat>
        <label>מספר עסקה</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>עסקעות מע&quot;מ</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>