force-app/main/default/objects/Payment_Transaction__c/fields/First_Name__c.field-meta.xml
<CustomField>
    <fullName>First_Name__c</fullName>
    <label>שם פרטי</label>
    <length>255</length>
    <type>Text</type>
</CustomField>