force-app/main/default/objects/Payment_Transaction__c/fields/Grand_Total__c.field-meta.xml
<CustomField>
    <fullName>Grand_Total__c</fullName>
    <label>סה&quot;כ כולל מע&quot;מ</label>
    <summarizedField>Payment_Transaction_line__c.Grand_Total__c</summarizedField>
    <summaryForeignKey>Payment_Transaction_line__c.Payment_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>