force-app/main/default/objects/Payment_Transaction__c/fields/Payment__c.field-meta.xml
<CustomField>
    <fullName>Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>תשלום אשראי</label>
    <referenceTo>Payment__c</referenceTo>
    <relationshipLabel>עסקעות מע&quot;מ</relationshipLabel>
    <relationshipName>Payment_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>