force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Method__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method__c</fullName>
    <label>אמצעי תשלום</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>אשראי</fullName>
            </value>
            <value>
                <fullName>מזומן</fullName>
            </value>
            <value>
                <fullName>צ&apos;ק</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>