force-app/main/default/objects/Payment_Transaction__c/fields/Payment_Transaction_ID__c.field-meta.xml
<CustomField>
    <fullName>Payment_Transaction_ID__c</fullName>
    <formula>Payment__r.Payment_Transaction_ID__c</formula>
    <label>Payment Transaction ID</label>
    <type>Text</type>
</CustomField>