force-app/main/default/objects/Payment_Transaction__c/fields/Price_Without_VAT__c.field-meta.xml
<CustomField>
    <fullName>Price_Without_VAT__c</fullName>
    <formula>Grand_Total__c / (1 + VALUE($Label.Vat) / 100)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>מחיר לפני מע&quot;מ</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>