force-app/main/default/objects/Payment_Transaction__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>סטטוס</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>פתוח</fullName>
                <default>true</default>
                <label>פתוח</label>
            </value>
            <value>
                <fullName>סגור</fullName>
            </value>
            <value>
                <fullName>מבוטל</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>