force-app/main/default/objects/Payment_Transaction__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>סה&quot;כ</label>
    <summarizedField>Payment_Transaction_line__c.Total__c</summarizedField>
    <summaryForeignKey>Payment_Transaction_line__c.Payment_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>