force-app/main/default/objects/Payment_Transaction__c/fields/Total_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Income__c</fullName>
    <label>סהכ הכנסות</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>