force-app/main/default/objects/Payment_Transaction__c/fields/Transaction_Card__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Card__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>כרטיס עסקת שירות</label>
    <referenceTo>Transaction_Card__c</referenceTo>
    <relationshipLabel>עסקעות מע&quot;מ</relationshipLabel>
    <relationshipName>Payment_Transaction</relationshipName>
    <type>Lookup</type>
</CustomField>