force-app/main/default/objects/Payment_Transaction__c/fields/Transaction_date__c.field-meta.xml
<CustomField>
    <fullName>Transaction_date__c</fullName>
    <label>תאריך ביצוע</label>
    <type>Date</type>
</CustomField>