force-app/main/default/objects/Payment_Transaction__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>סוג</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חיוב</fullName>
            </value>
            <value>
                <fullName>זיכוי</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>