force-app/main/default/objects/Payment_Transaction__c/fields/Vat__c.field-meta.xml
<CustomField>
    <fullName>Vat__c</fullName>
    <label>סה&quot;כ מע&quot;מ</label>
    <summarizedField>Payment_Transaction_line__c.Vat__c</summarizedField>
    <summaryForeignKey>Payment_Transaction_line__c.Payment_Transaction__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>